# Challenge-1

./: .gitignore  AGENTS.md  PLAN.md  README.md
backend/: Cargo.toml
backend/migrations/: 0001_initial.sql
backend/src/: access.rs  audit.rs  auth.rs  error.rs  main.rs  passkey.rs  portal.rs  rate_limit.rs  routes.rs
backend/src/db/: mod.rs  seed.rs
docs/: api-walkthrough.md  architecture-guide.md  operation-guide.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/community-staff/: page.tsx
frontend/app/login/: page.tsx
frontend/app/member/: page.tsx
frontend/app/platform-staff/: page.tsx
frontend/components/: login-form.tsx  portal-client.tsx
frontend/lib/: auth.ts  passkey.ts
